--- a/src/main/resources/com/openjfx/qllspahg/fxml/CongNhan/ChamCongCongNhan.fxml
+++ b/src/main/resources/com/openjfx/qllspahg/fxml/CongNhan/ChamCongCongNhan.fxml
@@ -103,7 +103,7 @@
                             </ImageView>
                         </graphic>
                     </Button>
-                    <Button mnemonicParsing="false" onAction="#luuBangChamCongCongNhan" prefHeight="30.0" prefWidth="94.0" text="Cập nhật">
+                    <Button fx:id="btnCapNhatBangChamCong" mnemonicParsing="false" onAction="#luuBangChamCongCongNhan" prefHeight="30.0" prefWidth="94.0" text="Cập nhật">
                         <graphic>
                             <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                                 <image>
