--- a/src/main/resources/com/openjfx/qllspahg/fxml/TaiKhoan/QuanLyTaiKhoan.fxml
+++ b/src/main/resources/com/openjfx/qllspahg/fxml/TaiKhoan/QuanLyTaiKhoan.fxml
@@ -1,14 +1,182 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.openjfx.qllspahg.gui.QuanTaiKhoanController"
-            prefHeight="400.0" prefWidth="600.0">
-
-</AnchorPane>
+<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.openjfx.qllspahg.gui.QuanLyTaiKhoanController">
+    <center>
+            <TableView fx:id="tblTaiKhoan" editable="true" onMouseClicked="#chonMotTaiKhoan" tableMenuButtonVisible="true">
+                <columns>
+                    <TableColumn fx:id="colSTT" prefWidth="36.0" text="STT" />
+                    <TableColumn fx:id="colMaTK" minWidth="-1.0" prefWidth="180.0" text="Mã tài khoản" />
+                    <TableColumn fx:id="colMatKhau" minWidth="-1.0" prefWidth="237.0" text="Mật khẩu" />
+                    <TableColumn fx:id="colVaiTro" minWidth="-1.0" prefWidth="120.0" text="Vai trò" />
+                    <TableColumn fx:id="colTrangThai" minWidth="-1.0" prefWidth="121.0" text="Trạng thái" />
+                </columns>
+            </TableView>
+    </center>
+    <top>
+        <Pane nodeOrientation="LEFT_TO_RIGHT" BorderPane.alignment="CENTER">
+            <children>
+                <HBox alignment="CENTER" spacing="10.0">
+                    <children>
+                        <HBox alignment="CENTER" spacing="10.0">
+                            <children>
+                                <Label text="Mã tài khoản:" HBox.hgrow="ALWAYS" />
+                                <TextField fx:id="tfLocMaTK" promptText="Nhập mã tài khoản" />
+                            </children>
+                        </HBox>
+                        <HBox alignment="CENTER" spacing="10.0" HBox.hgrow="ALWAYS">
+                            <children>
+                                <Label text="Trạng thái:" HBox.hgrow="ALWAYS" />
+                                <ComboBox fx:id="cbxLocTrangThai" promptText="Chọn trạng thái" HBox.hgrow="ALWAYS" />
+                            </children>
+                        </HBox>
+                        <Button mnemonicParsing="false" onAction="#layDuLieuLoc" text="Lấy dữ liệu " HBox.hgrow="ALWAYS">
+                            <HBox.margin>
+                                <Insets />
+                            </HBox.margin>
+                        </Button>
+                    </children>
+                    <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                    </padding>
+                </HBox>
+            </children>
+        </Pane>
+    </top>
+    <bottom>
+        <Pane BorderPane.alignment="CENTER" />
+    </bottom>
+   <left>
+        <VBox alignment="TOP_RIGHT" spacing="5.0" BorderPane.alignment="CENTER">
+            <children>
+                <VBox alignment="CENTER" style="-fx-border-color: black;">
+                    <children>
+                        <Label text="Nhập thông tin sản phẩm">
+                            <font>
+                                <Font name="System Bold" size="16.0" />
+                            </font>
+                            <padding>
+                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                            </padding>
+                        </Label>
+                        <HBox alignment="CENTER_LEFT" spacing="10.0">
+                            <children>
+                                <Label text="Mã tài khoản:" HBox.hgrow="ALWAYS" />
+                                <TextField fx:id="tfMaTK" prefHeight="26.0" prefWidth="227.0" promptText="Mã tài khoản" HBox.hgrow="ALWAYS" />
+                                <Button mnemonicParsing="false" onAction="#kiemTraTaiKhoan" text="Kiểm tra" />
+                            </children>
+                            <padding>
+                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                            </padding>
+                        </HBox>
+                        <HBox alignment="CENTER_LEFT" spacing="10.0">
+                            <padding>
+                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                            </padding>
+                            <children>
+                                <Label text="Mật khẩu:" HBox.hgrow="ALWAYS" />
+                                <TextField fx:id="tfMatKhau" prefHeight="26.0" prefWidth="172.0" promptText="Mật khẩu" HBox.hgrow="ALWAYS" />
+                            </children>
+                        </HBox>
+                        <HBox alignment="CENTER_LEFT" spacing="10.0">
+                            <padding>
+                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                            </padding>
+                        </HBox>
+                  <HBox alignment="CENTER_LEFT" spacing="10.0">
+                     <children>
+                        <Label text="Vai trò:" HBox.hgrow="ALWAYS" />
+                        <ComboBox fx:id="cbxVaiTro" HBox.hgrow="ALWAYS" />
+                     </children>
+                     <padding>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </padding>
+                  </HBox>
+                        <HBox alignment="CENTER_LEFT" spacing="10.0">
+                            <children>
+                                <Label text="Trạng thái:" HBox.hgrow="ALWAYS" />
+                                <ComboBox fx:id="cbxTrangThai" HBox.hgrow="ALWAYS" />
+                            </children>
+                            <padding>
+                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                            </padding>
+                        </HBox>
+                        <HBox alignment="CENTER" spacing="50.0">
+                            <children>
+                                <Button maxWidth="200.0" mnemonicParsing="false" onAction="#taoTaiKhoan" prefWidth="150.0" text="Thêm sản phẩm">
+                                    <graphic>
+                                        <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
+                                            <image>
+                                                <Image url="@../../images/icons/add-removebg-preview.png" />
+                                            </image>
+                                        </ImageView>
+                                    </graphic>
+                                </Button>
+                            </children>
+                            <VBox.margin>
+                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                            </VBox.margin>
+                        </HBox>
+                        <HBox alignment="CENTER" spacing="50.0">
+                            <children>
+                                <Button maxWidth="200.0" mnemonicParsing="false" onAction="#capNhatTaiKhoan" prefWidth="150.0" text="Cập nhật sản phẩm">
+                                    <graphic>
+                                        <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
+                                            <image>
+                                                <Image url="@../../images/icons/edit-removebg-preview.png" />
+                                            </image>
+                                        </ImageView>
+                                    </graphic>
+                                </Button>
+                            </children>
+                            <VBox.margin>
+                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                            </VBox.margin>
+                        </HBox>
+                        <HBox alignment="CENTER" spacing="50.0">
+                            <children>
+                                <Button maxWidth="200.0" mnemonicParsing="false" onAction="#xemMatKhau" prefWidth="150.0" text="Xem mật khẩu">
+                                    <graphic>
+                                        <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
+                                            <image>
+                                                <Image url="@../../images/icons/detail-icon.png" />
+                                            </image>
+                                        </ImageView>
+                                    </graphic>
+                                </Button>
+                            </children>
+                            <VBox.margin>
+                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                            </VBox.margin>
+                        </HBox>
+                    </children>
+                    <VBox.margin>
+                        <Insets left="5.0" right="5.0" />
+                    </VBox.margin>
+                </VBox>
+                <HBox alignment="TOP_CENTER" spacing="50.0">
+                    <VBox.margin>
+                        <Insets top="50.0" />
+                    </VBox.margin>
+                </HBox>
+            </children>
+            <BorderPane.margin>
+                <Insets />
+            </BorderPane.margin>
+        </VBox>
+   </left>
+</BorderPane>
